--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mongoos": "^0.0.1-security",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.1"
   }
 }
